--- a/vins_estimator/package.xml
+++ b/vins_estimator/package.xml
@@ -4,7 +4,7 @@
   <version>0.0.0</version>
   <description>The vins package</description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
+  <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="qintonguav@gmail.com">qintong</maintainer>
@@ -41,6 +41,7 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>rosbag</build_depend>
   <build_depend>image_transport</build_depend>
   <build_depend>camera_models</build_depend>
 
